[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/icons/16x16_misc.png" type="Texture" id=1]
[ext_resource path="res://Score.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 245, 135, 16, 16 )

[node name="Score" type="HBoxContainer"]
margin_right = 100.0
margin_bottom = 43.0
custom_constants/separation = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Point1" type="TextureRect" parent="."]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_right = 30.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 30 )
texture = SubResource( 1 )
stretch_mode = 6

[node name="Point2" type="TextureRect" parent="."]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 35.0
margin_right = 65.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 30 )
texture = SubResource( 1 )
stretch_mode = 6

[node name="Point3" type="TextureRect" parent="."]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 70.0
margin_right = 100.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 30 )
texture = SubResource( 1 )
stretch_mode = 6

[node name="Tween" type="Tween" parent="."]
